# light-std

./: .clang-format  .clangformat  .gitignore  .sconsign.dblite  CMakeLists.txt  CREDITS.md  CountLines.bat  GenerateProjects.bat  GenerateProjects.sh  LICENSE  LICENSE.md  README.md  TODO  build  build.bat  build.sh  build_game.bat  count.bat  generate_project.bat  generate_project_post.py  math.txt  nob  nob.c  nob.h  nob.old  out  premake5-lstd.lua  premake5.lua  premake5_lstd.lua  project.4coder  run_tests.bat  sconstruct  simple_test.c  test_errors.c
light-std/: CMakeLists.txt  light-std.natvis
light-std/src/: d3d_api.cpp  d3d_buffer.cpp  d3d_shader.cpp  d3d_texture.cpp  dx_graphics.cpp  pch.h  posix_common.cpp  posix_file_system.cpp  posix_thread.cpp  windows_common.cpp  windows_crash_handler.cpp  windows_error.cpp  windows_file.cpp  windows_file_handle.cpp  windows_file_system.cpp  windows_keycode.cpp  windows_monitor.cpp  windows_no_crt.cpp  windows_thread.cpp  windows_window.cpp
light-std/src/lstd/: basic.h  catalog.h  common.h  common.hpp  containers.hpp  context.cpp  context.h  context.hpp  debug_break.h  dx_graphics.h  file.h  file.hpp  fmt.hpp  graphics.h  intrin.h  io.h  math.h  os.h  platform.h  thread.h  thread.hpp  types.h  video.h  window.h
light-std/src/lstd/file/: basen.hpp  catalog.cpp  catalog.h  file_path.hpp  handle.cpp  handle.h  handle.hpp  local_file_path.hpp  path.cpp  path.h  path.hpp  watcher.cpp  watcher.h
light-std/src/lstd/format/: console_colors.hpp  core.hpp  format_float.hpp  format_integer.hpp  parse.hpp  specs.hpp  value.hpp
light-std/src/lstd/graphics/: api.cpp  api.h  asset.h  buffer.cpp  buffer.h  graphics.cpp  graphics.h  gtype.h  imgui_renderer.cpp  imgui_renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
light-std/src/lstd/graphics/ui/: ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGradient.h  (+17 more)
light-std/src/lstd/internal/: common.cpp  common.h  context.cpp  context.h  namespace.h
light-std/src/lstd/intrin/: general.h  math.h
light-std/src/lstd/intrinsics/: debug_break.h  float_spec.h  intrin.h  intrin.hpp  math.h
light-std/src/lstd/io/: buffer_writer.h  console_reader.h  console_writer.h  counting_writer.h  fmt.cpp  fmt.h  reader.cpp  reader.h  reader.hpp  string_reader.h  string_writer.h  writer.cpp  writer.h  writer.hpp
light-std/src/lstd/math/: decompose_lu.h  geometry.h  mat.h  mat4.cpp  mat4.h  mat_func.h  mat_util.h  no_init.h  quat.cpp  quat.h  quat_func.h  quat_util.h  rect.h  simd.h  simd_sse2.h  swizzle_1.inc  swizzle_2.inc  swizzle_4.inc  vec.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  vec_func.h
light-std/src/lstd/memory/: allocator.cpp  allocator.h  allocator.hpp  array.h  array.hpp  bucket_array.h  default_allocator.cpp  delegate.h  delegate.hpp  dynamic_array.hpp  dynamic_library.h  encode_decode.h  encode_decode.hpp  free_list_allocator.cpp  free_list_allocator.h  guid.cpp  hash.h  hash.hpp  hasher.h  memory.cpp  memory.hpp  memory_buffer.hpp  memory_operations.cpp  memory_view.hpp  owned_memory.hpp  owner_pointers.h  pixel_buffer.cpp  pixel_buffer.h  pool.cpp  pool.hpp  range.hpp  shared_memory.hpp  signal.h  stack_array.h  stack_dynamic_buffer.h  stack_dynamic_memory.hpp  string.cpp  string.h  string_builder.cpp  string_builder.h  (+5 more)
light-std/src/lstd/signal/: collector.hpp  event_queue.hpp  signal.hpp
light-std/src/lstd/storage/: array.h  delegate.h  guid.cpp  hash.h  hasher.h  owner_pointers.h  pixel_buffer.cpp  pixel_buffer.h  signal.h  stack_array.h  stack_dynamic_buffer.h  string.cpp  string.h  string_builder.cpp  string_builder.h  string_utils.h  table.h
light-std/src/lstd/string/: string.cpp  string.hpp  string_builder.cpp  string_builder.hpp  string_utils.hpp  string_view.hpp
light-std/src/lstd/video/: cursor.h  event.cpp  event.h  monitor.h  window.h  window_events.h
light-std/src/lstd/window/: events.h
lstd-benchmark/: CMakeLists.txt
lstd-benchmark/src/: main.cpp  memory.cpp
lstd-tests/: CMakeLists.txt  fractal.tga
lstd-tests/src/: main.cpp  test.h  test.hpp
lstd-tests/src/tests/: files.cpp  format.cpp  parse.cpp  ranges.cpp  signals.cpp  storage.cpp  string.cpp  strings.cpp  threads.cpp
(+1039 files in other folders)
